--- a/firstGit.html
+++ b/firstGit.html
@@ -3,6 +3,7 @@
 
     <body>
         <b>Hello mest trial2</b>
-        <p>something neww</p>
+        <p>Something new</p>
+        <b>How do you feel today? This is going to be epic!!!</b>
     </body>
 </html>
